perf: :zap: Some changes inside of the annotations.
